2017.10.06 Kentaro Fukuchi <kentaro@fukuchi.org>
	[master]
	* tests/test_{all,basic}.sh:
	  - All tests except test_configure.sh can be run by test_basic.sh now.
	  - test_all.sh activates test_basic.sh + test_configure.sh.
	  - test_basic.sh is better during active development, especially when you
	    gave additional options to configure script.
	* split.c, qrspec.c, mqrspec.c, mask.c, mmask.c, qrencode.c, qrinput.c:
	  - Fixed some warnings.

2017.10.05 Kentaro Fukuchi <kentaro@fukuchi.org>
	[4.0]
	* tests/test_{mask,mmask,qrspec,mqrspec,split_urls,qrencode}.c:
	  - Removed or commented out unused functions.
	  - Command line option introduced for verbose debug information.

2017.10.02 Kentaro Fukuchi <kentaro@fukuchi.org>
	[4.0]
	* bitstream.h, qrencode.c, qrencode_inner.h:
	  - Memory alignment improved.
	* tests/test_qrencode.c:
	  - Error messages improved.
	* tests/{common.h datachunk.h, decoder.h, rscode.h, rsecc_decoder.h}:
	  - Reserved macro names are replaced.
	* bitstream.[ch]:
	  - Some variables' type changed from int to size_t. (closing #89 and
	    #102)
	* tests/common.[ch], tests/test_split_url.c:
	  - Fixed some warnings.
	* NEWS:
	  - Format fixes.
	* tests/test_mask.c:
	  - Fixed some warnings.
	* qrencode.h, qrinput.h, mqrspec.c:
	  - Comment format fixes.
	* various files in tests:
	  - Fixed some warnings.
	* tests/test_qrencode.c:
	  - Removed unused function.
	* tests/test_qrinput.c:
	  - Added a new test function.

2017.09.29 Kentaro Fukuchi <kentaro@fukuchi.org>
	[4.0]
	* README.md:
	  - Format fixes.
	* rsecc.[ch]:
	  - Some variables' type changed from int to size_t. (closing #89 and
	    #102)

2017.09.21 Kentaro Fukuchi <kentaro@fukuchi.org>
	[4.0]
	* qrencode.1.in, NEWS:
	  - Release date has been updated.
	  - Documentation updated.
	* Version 4.0.0 has ben released.

2017.09.11 Kentaro Fukuchi <kentaro@fukuchi.org>
	* qrenc.c:
	  - Read buffer is now allocated as a static array to avoid malloc().