@@ -5,8 +5,9 @@
 	  - test_all.sh activates test_basic.sh + test_configure.sh.
 	  - test_basic.sh is better during active development, especially when you
 	    gave additional options to configure script.
-	* split.c, qrspec.c, mqrspec.c, mask.c, mmask.c, qrencode.c, qrinput.c:
-	  - Fixed some warnings.
+	* split.c, qrspec.c, mqrspec.c, mask.c, mmask.c, qrencode.c, qrinput.c,
+	  rsecc.c:
+	  - Fixed some warnings. (closing #89 and #102)
 
 2017.10.05 Kentaro Fukuchi <kentaro@fukuchi.org>
 	[4.0]
